--- a/bib/abbr.bib
+++ b/bib/abbr.bib
@@ -23,6 +23,7 @@
 @String{ jphysa               =   {J. Phys A}}
 @String{ jsac                 =   {J. Selec. A. Comm.}}
 @String{ IEEEsecpriv          =   {IEEE Security \& Privacy}}
+@String{ ieeetcadics          =   {IEEE Trans.~Comput.~Aided Des.~Intgr.~Circuit Syst.}}
 @String{ tdsc                 =   {Trans. Depend. Sec. Comp.}}
 @String{ ieeetit              =   {IEEE Trans. Inform. Theo.}}
 @String{ ipl                  =   {Information Processing Letters}}
@@ -48,6 +49,7 @@
 @String{ q                    =   {Quant.}}
 @String{ qic                  =   {Quant. Inf. Comp.}}
 @String{ qip                  =   {Quant. Inf. Process.}}
+@String{ qst                  =   {Quantum Sci. Technol.}}
 @String{ rmp                  =   {Rev. Mod. Phys}}
 @String{ rmphys               =   {Rep. Math. Phys.}}
 @String{ rms                  =   {Russian Math. Surveys}}
