--- a/bib/full.bib
+++ b/bib/full.bib
@@ -23,6 +23,7 @@
 @String{ jphysa               =   {Journal of Physics A}}
 @String{ jsac                 =   {IEEE Journal on Selected Areas in Communications}}
 @String{ IEEEsecpriv          =   {IEEE Security \& Privacy}}
+@String{ ieeetcadics          =   {IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems}}
 @String{ tdsc                 =   {IEEE Transactions on Dependable and Secure Computing}}
 @String{ ieeetit              =   {IEEE Transactions on Information Theory}}
 @String{ ipl                  =   {Information Processing Letters}}
@@ -48,6 +49,7 @@
 @String{ q                    =   {Quantum}}
 @String{ qic                  =   {Quantum Information {\&} Computation}}
 @String{ qip                  =   {Quantum Information Processing}}
+@String{ qst                  =   {Quantum Science and Technology}}
 @String{ rmp                  =   {Reviews of Modern Physics}}
 @String{ rmphys               =   {Reports on Mathematical Physics}}
 @String{ rms                  =   {Russian Mathematical Surveys}}
