--- a/bib/quantum.bib
+++ b/bib/quantum.bib
@@ -5135,7 +5135,7 @@
 }
 
 @InProceedings{BP15,
-    Title       =   {ZAPs and Non-Interactive Witness Indistinguishability from Indistinguishability Obfuscation},
+    Title       =   {{ZAP}s and Non-Interactive Witness Indistinguishability from Indistinguishability Obfuscation},
     Author      =   {Bitansky, Nir and Paneth, Omer},
     Booktitle   =   tcc2015,
     Volume      =   {II},
@@ -5886,4 +5886,44 @@
     Booktitle   =   tqc2014,
     Pages       =   {141--160},
     DOI         =   {10.4230/LIPIcs.TQC.2014.141},
+}
+
+@Misc{Sel13arxiv,
+    Title       =   {Generators and relations for n-qubit {C}lifford operators},
+    Author      =   {Selinger, Peter},
+    Year        =   {2013},
+    Note        =   {Available at \url{https://arxiv.org/abs/1310.6813}.},
+}
+
+@Article{AMMR13,
+    Title       =   {A meet-in-the-middle algorithm for fast synthesis of depth-optimal quantum circuits},
+    Author      =   {Amy, Matthew and Maslov, Dmitri and Mosca, Michele and Roetteler, Martin},
+    Year        =   {2013},
+    Journal     =   ieeetcadics,
+    Volume      =   {32},
+    Number      =   {6},
+    Pages       =   {818--830},
+    DOI         =   {10.1109/TCAD.2013.2244643},
+}
+ 
+@Article{DMM16,
+    Title       =   {Parallelizing quantum circuit synthesis},
+    Author      =   {Di Matteo, Olivia and Mosca, Michele},
+    Year        =   {2016},
+    Journal     =   qst,
+    Volume      =   {1},
+    Number      =   {1},
+    Pages       =   {015003},
+    DOI         =   {10.1088/2058-9565/1/1/015003},
+}
+
+@Article{AMM14,
+    Title       =   {Polynomial-time {T}-depth optimization of {C}lifford+{T} circuits via matroid partitioning},
+    Author      =   {Amy, Matthew and Maslov, Dmitri and Mosca, Michele},
+    Year        =   {2014},
+    Journal     =   ieeetcadics,
+    Volume      =   {33},
+    Number      =   {10},
+    Pages       =   {1476--1489},
+    DOI         =   {10.1109/TCAD.2014.2341953},
 }
